[tool.poetry]
name = "luminary-fpga"
version = "0.0.5"
description = "host tools for Luminary FPGA debug controllers"
authors = ["Great Scott Gadgets <info@greatscottgadgets.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.7"
pyusb = "^1.1.1"
pyvcd = "^0.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
luminary = 'luminary_fpga.commands.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
